<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Charity Now</string>
    <string name="action_settings">設定</string>
    <string name="action_feedback">提供建議</string>
    <string name="action_fetchApi">Fetch API</string>
    <string name="action_reloadList">Reload list</string>
    <string name="action_clearEvents">Clear events</string>
    <string name="action_fetchGcmToken">Fetch GCM Token</string>
    <string name="action_save">儲存</string>
    <string name="listview_text_placeholder">查詢資料中，請稍候⋯⋯</string>
    <string name="listview_text_placeholder_no_events">沒有資料，請稍後重試。</string>
    <string name="listview_text_current">最近賣旗活動</string>
    <string name="listview_text_past">過去賣旗活動</string>
    <string name="listview_text_membership">機構是以下組織成員：</string>
    <string name="listview_text_membership_unknown">沒有資料</string>
    <string name="listview_btn_web">開啟機構網頁</string>
    <string name="listview_btn_recruit_web">開啟招募賣旗義工網頁</string>
    <string name="listview_btn_recruit_phone">致電招募賣旗義工熱線</string>
    <string name="noti_text_suffix">賣旗機構</string>
    <string name="send">Send</string>
    <string name="clear">Clear</string>
    <string name="feedback_thankyou">多謝你的建議！</string>
    <string name="settings_text_flag_sale">收取賣旗日通知</string>
    <string name="settings_option_area_kowloon">九龍</string>
    <string name="settings_option_area_nt">新界及離島</string>
    <string name="settings_option_area_hk">香港島</string>
    <string name="settings_text_other_noti">收取慈善活動通知</string>
    <string name="settings_option_other_noti">收到相關活動的網上資料</string>
    <string name="settings_text_saved">設定已儲存</string>

</resources>
