<com.gc.materialdesign.views.ScrollView
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
   xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
   android:layout_width="match_parent"
   android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/settings_text_flag_sale"
            android:textColor="#9e9e9e"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="20dp" />

        <View style="@style/Divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:orientation="horizontal" >

            <com.gc.materialdesign.views.CheckBox
                    android:id="@+id/settings_flag_sale_hk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#1E88E5" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/settings_option_area_hk"
                android:textColor="#1E88E5"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:orientation="horizontal" >

            <com.gc.materialdesign.views.CheckBox
                    android:id="@+id/settings_flag_sale_kowloon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#1E88E5" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/settings_option_area_kowloon"
                android:textColor="#1E88E5"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:orientation="horizontal" >

            <com.gc.materialdesign.views.CheckBox
                    android:id="@+id/settings_flag_sale_nt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#1E88E5" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/settings_option_area_nt"
                android:textColor="#1E88E5"
                android:textSize="20dp" />
        </LinearLayout>

        <View style="@style/ThickDivider"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/settings_text_other_noti"
            android:textColor="#9e9e9e"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="20dp" />

        <View style="@style/Divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:orientation="horizontal" >

            <com.gc.materialdesign.views.CheckBox
                    android:id="@+id/settings_option_other_noti"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#1E88E5" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/settings_option_other_noti"
                android:textColor="#1E88E5"
                android:textSize="20dp" />
        </LinearLayout>

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/settings_action_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/action_save"
            android:onClick="onClick"
            bootstrap:bb_icon_right="fa-android"
            bootstrap:bb_type="success"
        />

    </LinearLayout>
</com.gc.materialdesign.views.ScrollView>